--- a/notebook/EDA - Insurance_claims.ipynb
+++ b/notebook/EDA - Insurance_claims.ipynb
@@ -23,6 +23,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b97233f2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting imblearn\n",
+      "  Using cached imblearn-0.0-py2.py3-none-any.whl (1.9 kB)\n",
+      "Collecting imbalanced-learn\n",
+      "  Using cached imbalanced_learn-0.10.1-py3-none-any.whl (226 kB)\n",
+      "Requirement already satisfied: scipy>=1.3.2 in /Users/dhananjaychaturvedi/anaconda3/lib/python3.10/site-packages (from imbalanced-learn->imblearn) (1.10.1)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /Users/dhananjaychaturvedi/anaconda3/lib/python3.10/site-packages (from imbalanced-learn->imblearn) (1.24.3)\n",
+      "Requirement already satisfied: scikit-learn>=1.0.2 in /Users/dhananjaychaturvedi/anaconda3/lib/python3.10/site-packages (from imbalanced-learn->imblearn) (1.2.2)\n",
+      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/dhananjaychaturvedi/anaconda3/lib/python3.10/site-packages (from imbalanced-learn->imblearn) (3.1.0)\n",
+      "Requirement already satisfied: joblib>=1.1.1 in /Users/dhananjaychaturvedi/anaconda3/lib/python3.10/site-packages (from imbalanced-learn->imblearn) (1.2.0)\n",
+      "Installing collected packages: imbalanced-learn, imblearn\n",
+      "Successfully installed imbalanced-learn-0.10.1 imblearn-0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install imblearn"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "421135ce",
    "metadata": {},
@@ -8017,7 +8045,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
