--- a/notebook/experiment.ipynb
+++ b/notebook/experiment.ipynb
@@ -33,6 +33,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting statsmodels\n",
+      "  Downloading statsmodels-0.14.0-cp310-cp310-macosx_10_9_x86_64.whl (9.9 MB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.9/9.9 MB\u001b[0m \u001b[31m15.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m00:01\u001b[0m00:01\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: numpy>=1.18 in /Users/dhananjaychaturvedi/anaconda3/lib/python3.10/site-packages (from statsmodels) (1.24.3)\n",
+      "Requirement already satisfied: pandas>=1.0 in /Users/dhananjaychaturvedi/anaconda3/lib/python3.10/site-packages (from statsmodels) (2.0.1)\n",
+      "Requirement already satisfied: scipy!=1.9.2,>=1.4 in /Users/dhananjaychaturvedi/anaconda3/lib/python3.10/site-packages (from statsmodels) (1.10.1)\n",
+      "Collecting patsy>=0.5.2\n",
+      "  Using cached patsy-0.5.3-py2.py3-none-any.whl (233 kB)\n",
+      "Requirement already satisfied: packaging>=21.3 in /Users/dhananjaychaturvedi/anaconda3/lib/python3.10/site-packages (from statsmodels) (23.0)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/dhananjaychaturvedi/anaconda3/lib/python3.10/site-packages (from pandas>=1.0->statsmodels) (2.8.2)\n",
+      "Requirement already satisfied: tzdata>=2022.1 in /Users/dhananjaychaturvedi/anaconda3/lib/python3.10/site-packages (from pandas>=1.0->statsmodels) (2023.3)\n",
+      "Requirement already satisfied: pytz>=2020.1 in /Users/dhananjaychaturvedi/anaconda3/lib/python3.10/site-packages (from pandas>=1.0->statsmodels) (2022.7)\n",
+      "Requirement already satisfied: six in /Users/dhananjaychaturvedi/anaconda3/lib/python3.10/site-packages (from patsy>=0.5.2->statsmodels) (1.16.0)\n",
+      "Installing collected packages: patsy, statsmodels\n",
+      "Successfully installed patsy-0.5.3 statsmodels-0.14.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install statsmodels "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
    "outputs": [
@@ -1890,7 +1928,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.0 (conda)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1904,9 +1942,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.10.9"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "1762875d695c3b8ce31fc2c385c40c45ae7c7b01a87f50658d419512c57bca88"
